# bpa-ingest

./: .env  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile-base  Dockerfile-builder  Dockerfile-dev  README.md  base-genomics-amplicon_units.json  docker-build.key  docker-build.pub  docker-compose-build.yml  docker-entrypoint-build.sh  imos.py  lambda-deploy.sh  lambda-invoke.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
bpaingest/: abstract.py  bpa.py  cli.py  dump.py  excel_wrapper.py  genhash.py  metadata.py  ncbi.py  ops.py  organizations.py  pkgcache.py  resource_metadata.py  schema.py  secondarydata.py  sensitive_species_wrapper.py  sync.py  test_util.py  tracking.py  util.py  wheatcultivars.py
bpaingest/gbr_amplicon/: download.py  files.py  ingest.py  metadata.py  samples.py
bpaingest/gbr_metagenomics/: ingest.py  metadata.py
bpaingest/handlers/: base_contextual_metadata_apply.py  base_contextual_metadata_sheet.py  bpam_csv_export.py  ckan_check_all_resources_integrities.py  ckan_resource_integrity_check.py  ckan_service.py  common.py  sheets_to_csv.py
bpaingest/libs/: bpa_constants.py  bpa_id_utils.py  common_resources.py  excel_wrapper.py  fetch_data.py  ingest_utils.py  md5lines.py  md5parser.py  multihash.py  munge.py  parse_md5.py  raw_matcher.py  response_stream.py  s3.py  sensitive_data.py  test_libs.py  tests.py
bpaingest/projects/: __init__.py
bpaingest/wheat_cultivars/: download.py  files.py  ingest.py  runs.py  samples.py
bpaingest/wheat_pathogens/: download.py  files.py  ingest.py  metadata.py  samples.py
ingest/: ingest.sh
sensitive_data/: act.csv  nsw.csv  nt.csv  nz.csv  qld.csv  sa.csv  tas.csv  vic.csv  wa.csv
track-metadata/bpam/: GenomicsMiSeqTrack-2017-10-17.csv  GenomicsPacBioTrack-2017-09-12.csv  MetabolomicsGCMSTrack-2017-09-12.csv  MetabolomicsGCMSTrack-2017-09-21.csv  MetabolomicsGCMSTrack-2017-10-17.csv  MetabolomicsLCMSTrack-2017-06-19.csv  MetabolomicsLCMSTrack-2017-09-21.csv  ProteomicsMS1QuantificationTrack-2017-06-19.csv  ProteomicsMS1QuantificationTrack-2017-09-15.csv  ProteomicsMS1QuantificationTrack-2017-10-17.csv  ProteomicsSwathMSTrack-2017-06-19.csv  ProteomicsSwathMSTrack-2017-09-15.csv  TranscriptomicsHiSeqTrack-2017-06-19.csv  TranscriptomicsHiSeqTrack-2017-09-12.csv  TranscriptomicsHiSeqTrack-2017-09-15.csv  TranscriptomicsHiSeqTrack-2017-10-17.csv
track-metadata/google-drive/: BPA Projects Data Transfer Summary  - IPM Omics.csv  BPA Projects Data Transfer Summary - AVID.csv  BPA Projects Data Transfer Summary - Antibiotic Resistant Pathogen .csv  BPA Projects Data Transfer Summary - AusARG.csv  BPA Projects Data Transfer Summary - Australian Microbiome.csv  BPA Projects Data Transfer Summary - BASE.csv  BPA Projects Data Transfer Summary - BPASampleData.csv  BPA Projects Data Transfer Summary - CIPPS Project Codes.csv  BPA Projects Data Transfer Summary - CIPPS.csv  BPA Projects Data Transfer Summary - Collaborations Project Codes.csv  BPA Projects Data Transfer Summary - Collaborations.csv  BPA Projects Data Transfer Summary - Environmental DNA.csv  BPA Projects Data Transfer Summary - Forest.csv  BPA Projects Data Transfer Summary - Fungi.csv  BPA Projects Data Transfer Summary - GAP.csv  BPA Projects Data Transfer Summary - Grasslands.csv  BPA Projects Data Transfer Summary - Marine Microbe.csv  BPA Projects Data Transfer Summary - OzMammal.csv  BPA Projects Data Transfer Summary - OzMammalSecondary.csv  BPA Projects Data Transfer Summary - Plant Pathogen Project Codes.csv  BPA Projects Data Transfer Summary - Plant Pathogen.csv  BPA Projects Data Transfer Summary - Plant Protein Atlas.csv  BPA Projects Data Transfer Summary - Stem Cell.csv  BPA Projects Data Transfer Summary - TSI.csv  Bioplatforms Projects Data Transfer Summary - AD Project Codes.csv  (+4 more)
util/: README.md
(+182 files in other folders)
