[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "bpaingest"
version = "6.11.4"
authors = ["Grahame Bowland <grahame.bowland@qcif.edu.au>", "Matthew Mulholland <matt@redboxresearchdata.com.au>", "Mark Tearle <mark.tearle@qcif.edu.au>", "Brigette Gonch <b.gonch@qcif.edu.au>"]
description = "Data management for Bioplatforms Australia projects"
readme = "README.md"

[tool.poetry.scripts]
bpa-ingest = 'bpaingest.cli:main'

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
pandas = ">=1.1.1"
unipath = "^1.1"
xlrd = "^1.2.0"
xlwt = "^1.3.0"
beautifulsoup4 = ">=4.9.0"
requests = ">=2.23.0"
boto3 = ">=1.21.24"
python-dateutil = "^2.8.1"
google-api-python-client = "^1.8.2"
ckanapi = { git = "https://github.com/BioplatformsAustralia/ckanapi.git", branch = "streaming-uploads" }
bpasslh = {git = "https://github.com/BioplatformsAustralia/bpasslh.git", rev = "2.1.7"}
bitmath = "^1.3.3"
openpyxl = "^3.0.10"
setuptools = "^67.6.1"
numpy = "<2"
deepdiff = "^8.0.1"
tqdm = ">=4.67.1"
urllib3 = ">=2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^19.10b0"
tox = "^3.14.6"
flake8 = "^3.7.9"
pytest = "^7.2.0"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38
isolated_build = True

[testenv]
deps=pytest
commands=pytest
"""

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
